# cg-labs

./: .gitignore  CMakeLists.txt  compile_commands.json
include/veekay/: Cylinder.hpp  veekay.hpp
include/veekay/geometry/: Cube.hpp  Cylinder.hpp  Plane.hpp  Sphere.hpp  Vertex.hpp
include/veekay/graphics/: Texture.hpp
include/veekay/scene/: Camera.hpp  Lights.hpp  Material.hpp
shaders/: city.frag  city.vert  debug.vert  shader.frag  shader.vert  shadow.vert  simple.frag  simple.vert
source/: Cylinder.cpp  veekay.cpp
source/geometry/: Cube.cpp  Cylinder.cpp  Plane.cpp  Sphere.cpp
source/graphics/: Texture.cpp
testbed/: CMakeLists.txt  main.cpp
